@@ -2,8 +2,10 @@ gcs (0.3.20+ehbello3) UNRELEASED; urgency=low
 
   * Added a pseudo syntax check for package lists used in Debian control files.
     Now supports packages with version and multiple dependences.
+  * Added support to create softlinks files using dh_link instead of copying
+    them.
 
- -- Enrique Hernández Bello <quique@osl.ull.es>  Tue, 07 Sep 2010 15:21:17 +0100
+ -- Enrique Hernández Bello <quique@osl.ull.es>  Sat, 25 Sep 2010 23:21:27 +0100
 
 gcs (0.3.20+ehbello2) lucid; urgency=low
 
